[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "your-package-name"
version = "0.1.0"
description = "这是一个开源 Python 项目模板"
authors = [{ name = "你的名字", email = "you@example.com" }]
readme = "README.md"
license = { text = "MIT" }

[tool.black]
line-length = 88

[tool.flake8]
max-line-length = 88
